testdata/test/resources/com/yafred/asn1/test/should_fail/import_from_undef_module.asn
-- FAILS: module imports from unknown module

My-Module DEFINITIONS ::=


BEGIN

IMPORTS My-Integer 
FROM My-Other-Module;

My-Type ::= My-Integer

END